<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayoutActivity" >
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5.5"
        android:gravity="center_vertical"
        android:background="#F7F7F7">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            android:background="#F7F7F7"
            android:text="@string/back"
            android:textSize="15sp" >
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/contacts"
            android:layout_alignBaseline="@+id/back"
            android:textSize="22sp" />
    </RelativeLayout>
    
     <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:text="">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5.5"
        android:background="@drawable/border"
        android:paddingTop="0.5dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/chats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7F7F7"
            android:text="@string/chats"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="15sp" >
        </Button>
        <Button
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7F7F7"
            android:text="@string/contacts"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="15sp" >
        </Button>
        <Button
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7F7F7"
            android:text="@string/news"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp" >
        </Button>
        <Button
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7F7F7"
            android:text="@string/setting"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp" >
        </Button>
    </LinearLayout>

</LinearLayout>